--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "dog-scraper-core": "https://github.com/tabuckner/dog-scraper-core.git#develop",
     "mongoose": "^5.7.5",
+    "nest-schedule": "^0.6.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
